cmake_minimum_required(VERSION 3.29)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED On)

project(
    leetcode 
    LANGUAGES CXX
)

add_executable(
    1460
    1460.cc
)
add_executable(
    1508 
    1508.cc
)
add_executable(
    2053
    2053.cc
)
add_executable(
    3016
    3016.cc
)
add_executable(
    1535
    1535.cc
)
add_executable(
    273 
    273.cc
)
add_executable(
    840
    840.cc
)
add_executable(
    885 
    885.cc
)
add_executable(
    959 
    959.cc
)
